updated website sensebio

--- a/sensebio/contact/index.html
+++ b/sensebio/contact/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SenseBio - Contact</title>
-    <link rel="icon" href="img/favicon.ico" type="image/png">
+    <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicons//manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../libs/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../libs/themify-icons/themify-icons.css">
@@ -13,7 +29,6 @@
     <link rel="stylesheet" href="../libs/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="../libs/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="../libs/flat-icon/font/flaticon.css">
-    <link rel="stylesheet" href="../libs/nice-select/nice-select.css">
   
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -37,8 +52,8 @@
                 <li class="nav-item "><a class="nav-link" href="../about/">About</a></li> 
                 <li class="nav-item"><a class="nav-link" href="../product/">Product</a>
                 <li class="nav-item active"><a class="nav-link" href="../contact/">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" style="border-bottom:2px solid #55dede;" href="../login/">Login</a></li>
-                <li class="nav-item" style="display: flex;align-items: center;"><a style=" padding: 4px 20px; " class="button" href="#">Get Started</a></li>
+                <li class="nav-item"><a class="nav-link" style="border-bottom:2px solid var(--sexy-color);" href="../login/">Login</a></li>
+                <li class="nav-item get-started" style="display: flex;align-items: center;justify-content: center;"><a style=" padding: 6px 20px; " class="button" href="#">Get Started</a></li>
               </ul>
             </div> 
           </div>
@@ -217,7 +232,7 @@
         <div class="footer-bottom">
           <div class="row align-items-center">
             <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href=".../" target="_blank">SenseBio</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="../" target="_blank">SenseBio</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -232,11 +247,10 @@
     <!-- ================ End footer Area ================= -->
   
   
-    <script src=".../libs/jquery/jquery-3.2.1.min.js"></script>
-  <script src=".../libs/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src=".../libs/owl-carousel/owl.carousel.min.js"></script>
-  <script src=".../libs/nice-select/jquery.nice-select.min.js"></script>
-  <script src=".../js/jquery.ajaxchimp.min.js"></script>
-  <script src=".../js/main.js"></script>
+    <script src="../libs/jquery/jquery-3.2.1.min.js"></script>
+  <script src="../libs/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="../libs/owl-carousel/owl.carousel.min.js"></script>
+  <script src="../js/jquery.ajaxchimp.min.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
