--- a/sensebio/about/index.html
+++ b/sensebio/about/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SenseBio - About</title>
-    <link rel="icon" href="../img/favicon.ico" type="image/png">
+    <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../img/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../img/favicons//manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="../libs/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../libs/themify-icons/themify-icons.css">
@@ -13,7 +29,6 @@
     <link rel="stylesheet" href="../libs/owl-carousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="../libs/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="../libs/flat-icon/font/flaticon.css">
-    <link rel="stylesheet" href="../libs/nice-select/nice-select.css">
   
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -36,8 +51,8 @@
                 <li class="nav-item active"><a class="nav-link" href="../about/">About</a></li> 
                 <li class="nav-item"><a class="nav-link" href="../product/">Product</a>
                 <li class="nav-item"><a class="nav-link" href="../contact/">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" style="border-bottom:2px solid #55dede;" href="../login/">Login</a></li>
-                <li class="nav-item" style="display: flex;align-items: center;"><a style=" padding: 4px 20px; " class="button" href="#">Get Started</a></li>
+                <li class="nav-item"><a class="nav-link" style="border-bottom:2px solid var(--sexy-color);" href="../login/">Login</a></li>
+                <li class="nav-item get-started" style="display: flex;align-items: center;justify-content: center;"><a style=" padding: 6px 20px; " class="button" href="#">Get Started</a></li>
               </ul>
             </div> 
           </div>
@@ -54,7 +69,9 @@
                 <h1>About Us</h1>
                 <h2>#Health is Wealth – Keep this treasure Safe</h2>
                 <h3>Fitter, healthier, happier</h3>
+                <p>Headquartered in Mumbai, sensebio is a healthtech startup which can track and monitor overall health, fitness, and food information of an individual and family, that "sparks people" to live healthier, happier lives while helping them reach their goals.</p>
                 <p>We are a group of individuals who are passionate about building the best line of products in healthcare. Every products we are building has a connected experience with all others that we have built. we want to bring the eco-system experiense in healthcare, where healthcare provides and customers are connected in a single environments.</p>
+                <p>We offer nutrition advice, health-and-fitness tools, a highly engaged and supportive community,and resources that are 100% free. Our proven system inspires, motivates, and supports our members to build healthy and sustainable habits. Far beyond just weight loss, sensebio helps everyone learn to eat better and exercise regularly—for life.</p>
             </div>
             <div class="col-md-6 col-lg-5 offset-xl-1">
               <img class="img-fluid" style=" height: 400px; " src="../img/home/IOS_Slice 1.png" alt="">
@@ -63,6 +80,56 @@
         </div>
       </section>
     <!--================Hero Banner Area End =================-->
+
+  <!--================Hero Banner Area Start =================-->
+  <section class="hero-banner magic-ball">
+      <div class="container">
+        <div class="row align-items-center text-center text-md-left">
+            <div class="col-md-6 col-lg-5">
+                <img class="img-fluid" src="../img/home/healthcare.svg" alt="">
+              </div>
+          <div class="col-md-6 col-lg-7 offset-xl-1 col-xl-6 mb-5 mb-md-0">
+              <h1>Our Philosophy</h1>
+              <h3>SENSE.BIO is an experience driven company.</h3>
+              <p>We thrive to deliver the best connected experience through our products. Our version of healthcare is more connected.
+              Smiple & safer
+              To do this, we work with healthcare providers in the most consolidated manner, to know more
+              about how recoreds are generated , where technology can deliver its
+              best. and patient experience can be improved.</p>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+  <!--================Hero Banner Area End =================-->
+    <!--================Hero Banner Area Start =================-->
+    <section class="hero-banner magic-ball">
+        <div class="container">
+          <div class="row align-items-center text-center text-md-left">
+            <div class="col-md-6 col-lg-7 col-xl-6 mb-5 mb-md-0">
+                <h1>WHAT MAKES US DIFFERENT</h1>
+                <p>Problems can be solved the easy way or the right way. We price ourselves in the rights way. For healthcare providers, we not only help them work remotely, but also efficiently. We help them visualise their finance and operations with analytics, charts & statistis while maintaining the focus on the potient. For, we help you manage your medical records without you having to do anything. we bring our understanding of healthcare and analytics to help you manage your health better and more easily.</p>
+            </div>
+            <div class="col-md-6 col-lg-5 offset-xl-1">
+              <img class="img-fluid" style=" height: 400px; " src="../img/home/difference.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+    <!--================Hero Banner Area End =================-->
+  <!--================Hero Banner Area Start =================-->
+  <!-- <section class="hero-banner magic-ball">
+      <div class="container">
+        <div class="row align-items-center text-center text-md-left">
+          <div>
+              <h1>WHAT MAKES US DIFFERENT</h1>
+              <p>Problems can be solved the easy way or the right way. We price ourselves in the rights way. For healthcare providers, we not only help them work remotely, but also efficiently. We help them visualise their finance and operations with analytics, charts & statistis while maintaining the focus on the potient. For, we help you manage your medical records without you having to do anything. we bring our understanding of healthcare and analytics to help you manage your health better and more easily.</p>
+          </div>
+        </div>
+      </div>
+    </section> -->
+  <!--================Hero Banner Area End =================-->
+
   <!--================Testimonial section Start =================-->
   <section class="bg-gray section-padding magic-ball magic-ball-testimonial pb-xl-5">
       <div class="container">
@@ -129,7 +196,11 @@
       </div>
     </section>
   <!--================Testimonial section End =================-->
-
+  <!-- schedule demo --->
+  <section class="demo--strip">
+      <h3>Start your healthy journey today</h3>
+    <a class="btn-hero" href="../contact/">Request Demo</a>  </section>
+ <!-- schedule demo -->
 
 
   <!-- ================ start footer Area ================= -->
@@ -174,7 +245,7 @@
         <div class="footer-bottom">
           <div class="row align-items-center">
             <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href=".../" target="_blank">SenseBio</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="../" target="_blank">SenseBio</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -191,10 +262,7 @@
   <script src="../libs/jquery/jquery-3.2.1.min.js"></script>
   <script src="../libs/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="../libs/owl-carousel/owl.carousel.min.js"></script>
-  <script src="../libs/Magnific-Popup/jquery.magnific-popup.min.js"></script>
-  <script src="../libs/nice-select/jquery.nice-select.min.js"></script>
   <script src="../js/jquery.ajaxchimp.min.js"></script>
-  <script src="../js/mail-script.js"></script>
   <script src="../js/skrollr.min.js"></script>
   <script src="../js/main.js"></script>
 </body>
